tests/functional/lang/eval-fail/assert-equal-ints.err.exp
error:
       … while evaluating the condition of the assertion '({ b = 1; } == { b = 2; })'
         at /pwd/lang/eval-fail/assert-equal-ints.nix:1:1:
            1| assert { b = 1; } == { b = 2; };
             | ^
            2| abort "unreachable"

       … while comparing attribute 'b'

       … where left hand side is
         at /pwd/lang/eval-fail/assert-equal-ints.nix:1:10:
            1| assert { b = 1; } == { b = 2; };
             |          ^
            2| abort "unreachable"

       … where right hand side is
         at /pwd/lang/eval-fail/assert-equal-ints.nix:1:24:
            1| assert { b = 1; } == { b = 2; };
             |                        ^
            2| abort "unreachable"

       error: an integer with value '1' is not equal to an integer with value '2'
